Fix Field Guide Double Scrollbar

--- a/src/styles/components/control-panel.styl
+++ b/src/styles/components/control-panel.styl
@@ -79,7 +79,6 @@
 
     div:nth-child(2)
       span
-        overflow: auto
         word-wrap: break-word
 
     i
